[metadata]
name = abc-depccg-parser
version = attr:abc_depccg_parser.__version__
license = "MIT License"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Langugae :: Python :: 3.7

author = "T. N. Hayashi"
author_email = "net@hayashi-lin.net"
description = ""
keywords = "depccg ABCTreebank treebank NLP"

[options]
packages = find:
# include_package_data = true
install_requires =
    click
    parsy
    cython
    numpy
    janome
    allennlp
    depccg @ git+https://github.com/masashi-y/depccg@67c15c679f53903f8ab05ffb47e78696f2ee7c06

[options.entry_points]
console_scripts =
    abc_depccg_parser = abc_depccg_parser.cli:cmd_main